tests/errortests/missing_return_type.txt
FILENAME:8:40: error: the return type for the function "my_function" is missing.
    function my_function(x,y : integer);
                                       ^
